Initial Commit for Bibliography

--- a/Latex/bibliography/literature.bib
+++ b/Latex/bibliography/literature.bib
@@ -2,22 +2,564 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Wiebke Koepp at 2014-12-29 19:15:32 +0100 
+%% Created for Wiebke Koepp at 2015-01-19 22:12:33 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@book{latex,
-	Author = {Leslie Lamport},
-	Date-Modified = {2014-12-29 18:15:32 +0000},
-	Publisher = {Addison-Wesley Professional},
-	Title = {LaTeX : A Documentation Preparation System User's Guide and Reference Manual},
-	Year = {1994}}
+@book{cocchini10,
+	Author = {Franco Cocchini},
+	Date-Added = {2015-01-19 21:11:27 +0000},
+	Date-Modified = {2015-01-19 21:12:33 +0000},
+	Publisher = {Lulu.com},
+	Title = {Wanderings Around Tangram},
+	Year = {2010}}
 
-@book{lll,
-	Author = {Leslie Lamport},
-	Publisher = {Addison-Wesley Professional},
-	Title = {LaTeX : A Documentation Preparation System User's Guide and Reference Manual},
-	Year = {1994}}
+@inproceedings{murray12,
+	Author = {Naila Murray and Luca Marchesotti and Florent Perronnin},
+	Booktitle = {BMVC'12},
+	Date-Added = {2015-01-19 21:05:18 +0000},
+	Date-Modified = {2015-01-19 21:05:46 +0000},
+	Pages = {1-10},
+	Title = {Learning to Rank Images Using Semantic and Aesthetic Labels},
+	Year = {2012}}
+
+@article{hunt07,
+	Author = {Hunt, Martin and Pong, Christopher and Tucker, George},
+	Date-Added = {2015-01-19 21:03:23 +0000},
+	Date-Modified = {2015-01-19 21:04:00 +0000},
+	Journal = {UMAP Journal},
+	Pages = {343--362},
+	Title = {Difficulty-Driven Sudoku Puzzle Generation},
+	Year = {2007}}
+
+@techreport{taylor11,
+	Author = {Taylor, Joshua and Parberry, Ian},
+	Date-Added = {2015-01-19 20:59:06 +0000},
+	Date-Modified = {2015-01-19 21:03:16 +0000},
+	Institution = {University of North Texas},
+	Number = {LARC-2011-01},
+	Title = {Procedural Generation of Sokoban Levels},
+	Year = {2011}}
+
+@inproceedings{zhou12,
+	Author = {Zhou, Yahan and Wang, Rui},
+	Booktitle = {Proceedings of Bridges 2012: Mathematics, Music, Art, Architecture, Culture},
+	Date-Added = {2015-01-19 20:57:05 +0000},
+	Date-Modified = {2015-01-19 20:57:24 +0000},
+	Organization = {Tessellations Publishing},
+	Pages = {49--56},
+	Title = {An Algorithm for Creating Geometric Dissection Puzzles},
+	Year = {2012}}
+
+@article{xu09,
+	Author = {Xu, Chungen and Xu, Weng},
+	Date-Added = {2015-01-19 20:55:42 +0000},
+	Date-Modified = {2015-01-19 20:56:10 +0000},
+	Journal = {Journal of Mathematics Research},
+	Number = {2},
+	Pages = {43--46},
+	Title = {The model and algorithm to estimate the difficulty levels of Sudoku puzzles},
+	Volume = {1},
+	Year = {2009}}
+
+@article{wang42,
+	Author = {Wang, Fu Traing and Hsiung, Chuan-Chih},
+	Date-Added = {2015-01-19 20:54:34 +0000},
+	Date-Modified = {2015-01-19 20:54:55 +0000},
+	Journal = {The American Mathematical Monthly},
+	Number = {9},
+	Pages = {pp. 596-599},
+	Publisher = {Mathematical Association of America},
+	Title = {A Theorem on the Tangram},
+	Volume = {49},
+	Year = {1942},
+	Bdsk-Url-1 = {http://www.jstor.org/stable/2303340}}
+
+@inproceedings{wang14,
+	Author = {Wang, Lidan and Lin, Jimmy and Metzler, Donald and Han, Jiawei},
+	Booktitle = {Proceedings of the companion publication of the 23rd international conference on World wide web companion},
+	Date-Added = {2015-01-19 20:53:36 +0000},
+	Date-Modified = {2015-01-19 20:53:55 +0000},
+	Organization = {International World Wide Web Conferences Steering Committee},
+	Pages = {209--210},
+	Title = {Learning to Efficiently Rank on Big Data},
+	Year = {2014}}
+
+@inproceedings{wang12,
+	Author = {Hao Wang and Yu-Wen Wang and Chuen-Tsai Sun},
+	Booktitle = {Proceedings of DiGRA Nordic 2012 Conference: Local and Global--Games in Culture and Society},
+	Date-Added = {2015-01-19 20:50:28 +0000},
+	Date-Modified = {2015-01-19 20:52:48 +0000},
+	Title = {Rating Logic Puzzle Difficulty Automatically in a Human Perspective},
+	Url = {http://www.digra.org/wp-content/uploads/digital-library/12168.26157.pdf},
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.digra.org/wp-content/uploads/digital-library/12168.26157.pdf}}
+
+@article{walravens07,
+	Author = {Walravens, Hartmut},
+	Date-Added = {2015-01-19 20:45:46 +0000},
+	Date-Modified = {2015-01-19 20:49:11 +0000},
+	Journal = {Cubism For Fun},
+	Title = {Notes on the Early History of the Tangram in Germany},
+	Volume = {CFF 72},
+	Year = {2007}}
+
+@incollection{vembu11,
+	Author = {Vembu, Shankar and G{\"a}rtner, Thomas},
+	Booktitle = {Preference learning},
+	Date-Added = {2015-01-19 20:45:11 +0000},
+	Date-Modified = {2015-01-19 20:45:19 +0000},
+	Pages = {45--64},
+	Publisher = {Springer},
+	Title = {Label ranking algorithms: A survey},
+	Year = {2011}}
+
+@inproceedings{spencer05,
+	Author = {Spencer, Stanley and others},
+	Booktitle = {Renaissance Banff: Mathematics, Music, Art, Culture},
+	Date-Added = {2015-01-19 20:44:21 +0000},
+	Date-Modified = {2015-01-19 20:44:29 +0000},
+	Organization = {Canadian Mathematical Society},
+	Pages = {31--36},
+	Title = {An Introduction to the Golden Tangram and its Tiling Properties},
+	Year = {2005}}
+
+@inproceedings{siqueira09,
+	Author = {Siqueira J{\'u}nior, Manoel and Alves, Rafael Machado and Clua, Esteban Walter Gonzalez and Passos, Erick Baptista and Silva, Clayton Reis da and Montenegro, Anselmo Antunes and Oliveira, J{\'u}lio Cesar},
+	Booktitle = {Proceedings of the 2009 VIII Brazilian Symposium on Games and Digital Entertainment},
+	Date-Added = {2015-01-19 20:43:14 +0000},
+	Date-Modified = {2015-01-19 20:43:25 +0000},
+	Organization = {IEEE Computer Society},
+	Pages = {9--16},
+	Title = {A Novel Algorithm to Verify the Solution of Geometric Puzzle Games},
+	Year = {2009}}
+
+@article{scott06,
+	Author = {Scott, Paul},
+	Date-Added = {2015-01-19 20:42:09 +0000},
+	Date-Modified = {2015-01-19 20:42:16 +0000},
+	Journal = {Australian Mathematics Teacher},
+	Number = {2},
+	Pages = {2--5},
+	Publisher = {ERIC},
+	Title = {Convex Tangrams.},
+	Volume = {62},
+	Year = {2006}}
+
+@article{roberge77,
+	Author = {Roberge, James J.},
+	Date-Added = {2015-01-19 20:40:48 +0000},
+	Date-Modified = {2015-01-19 20:41:27 +0000},
+	Journal = {The Mathematics Teacher},
+	Number = {3},
+	Pages = {239--242},
+	Publisher = {National Council of Teachers of Mathematics},
+	Title = {Tangram Geometry},
+	Volume = {70},
+	Year = {1977},
+	Bdsk-Url-1 = {http://www.jstor.org/stable/27960791}}
+
+@book{read65,
+	Author = {Ronald C. Read},
+	Date-Added = {2015-01-19 20:38:22 +0000},
+	Date-Modified = {2015-01-19 20:40:02 +0000},
+	Publisher = {Dover Publications},
+	Title = {Tangrams: 330 Puzzles},
+	Year = {1965}}
+
+@inproceedings{perez12,
+	Author = {Perez, Elena Verdu and Santos, Luisa M Regueras and Perez, Maria Jesus Verdu and de Castro Fernandez, Juan Pablo and Martin, Ricardo Garcia},
+	Booktitle = {Frontiers in Education Conference (FIE), 2012},
+	Date-Added = {2015-01-19 20:37:33 +0000},
+	Date-Modified = {2015-01-19 20:37:41 +0000},
+	Organization = {IEEE},
+	Pages = {1--5},
+	Title = {Automatic classification of question difficulty level: Teachers' estimation vs. students' perception},
+	Year = {2012}}
+
+@article{orellana14,
+	Author = {Orellana-Rodriguez, Claudia and Nejdl, Wolfgang and Diaz-Aviles, Ernesto and Altingovde, Ismail Sengor},
+	Date-Added = {2015-01-19 20:36:42 +0000},
+	Date-Modified = {2015-01-19 20:36:48 +0000},
+	Title = {Learning to Rank for Joy: Leveraged Features and Related Work},
+	Year = {2014}}
+
+@article{nicholls84,
+	Author = {Nicholls, John G and Miller, Arden T},
+	Date-Added = {2015-01-19 20:33:53 +0000},
+	Date-Modified = {2015-01-19 20:34:58 +0000},
+	Journal = {Child Development},
+	Pages = {951--959},
+	Publisher = {JSTOR},
+	Title = {The Differentiation of the Concepts of Difficulty and Ability},
+	Year = {1983}}
+
+@article{martins10,
+	Author = {T.C. Martins and M.S.G. Tsuzuki},
+	Date-Added = {2015-01-19 20:31:35 +0000},
+	Date-Modified = {2015-01-19 20:32:33 +0000},
+	Journal = {Expert Systems with Applications},
+	Number = {3},
+	Pages = {1955 - 1972},
+	Title = {Simulated Annealing Applied to the Irregular Rotational Placement of Shapes Over Containers with Fixed Dimensions},
+	Volume = {37},
+	Year = {2010},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0957417409006575},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.eswa.2009.06.081}}
+
+@article{marchesotti14,
+	Author = {Marchesotti, Luca and Murray, Naila and Perronnin, Florent},
+	Date-Added = {2015-01-19 20:26:43 +0000},
+	Date-Modified = {2015-01-19 20:27:40 +0000},
+	Journal = {International Journal of Computer Vision},
+	Pages = {1-21},
+	Publisher = {Springer},
+	Title = {Discovering Beautiful Attributes for Aesthetic Image Analysis},
+	Year = {2014}}
+
+@article{malone81,
+	Author = {Malone, Thomas W},
+	Date-Added = {2015-01-19 20:23:14 +0000},
+	Date-Modified = {2015-01-19 20:23:48 +0000},
+	Journal = {Pipeline},
+	Number = {2},
+	Pages = {50},
+	Publisher = {ERIC},
+	Title = {What Makes Things Fun to Learn? A Study of Intrinsically Motivating Computer Games.},
+	Volume = {6},
+	Year = {1981}}
+
+@inproceedings{malone80,
+	Author = {Malone, Thomas W},
+	Booktitle = {Proceedings of the 3rd ACM SIGSMALL symposium and the first SIGPC symposium on Small systems},
+	Date-Added = {2015-01-19 20:22:12 +0000},
+	Date-Modified = {2015-01-19 20:23:14 +0000},
+	Organization = {ACM},
+	Pages = {162--169},
+	Title = {What Makes Things Fun to Learn? Heuristics for Designing Instructional Computer Games},
+	Year = {1980}}
+
+@article{mcwhinnie68,
+	Author = {McWhinnie, Harold J},
+	Date-Added = {2015-01-19 20:21:06 +0000},
+	Date-Modified = {2015-01-19 20:21:24 +0000},
+	Journal = {Acta Psychologica},
+	Pages = {363--375},
+	Publisher = {Elsevier},
+	Title = {A Review of Research on Aesthetic Measure},
+	Volume = {28},
+	Year = {1968}}
+
+@book{loyd07,
+	Author = {Sam Loyd},
+	Date-Added = {2015-01-19 20:17:08 +0000},
+	Date-Modified = {2015-01-19 20:18:13 +0000},
+	Publisher = {Dover Publications},
+	Series = {Dover Recreational Math},
+	Title = {Sam Loyd's Book of Tangrams},
+	Year = {2007}}
+
+@article{li11,
+	Author = {Hang Li},
+	Date-Added = {2015-01-19 20:11:12 +0000},
+	Date-Modified = {2015-01-19 20:13:13 +0000},
+	Journal = {IEICE TRANSACTIONS on Information and Systems},
+	Number = {10},
+	Pages = {1854--1862},
+	Publisher = {The Institute of Electronics, Information and Communication Engineers},
+	Title = {A Short Introduction to Learning to Rank},
+	Volume = {94},
+	Year = {2011}}
+
+@article{kriegler91,
+	Author = {Kriegler, Shelley},
+	Date-Added = {2015-01-19 20:09:22 +0000},
+	Date-Modified = {2015-01-19 20:10:36 +0000},
+	Journal = {The Arithmetic Teacher},
+	Number = {9},
+	Pages = {38--43},
+	Publisher = {National Council of Teachers of Mathematics},
+	Title = {The Tangram - It's More Than an Ancient Puzzle},
+	Volume = {38},
+	Year = {1991},
+	Bdsk-Url-1 = {http://www.jstor.org/stable/41195078}}
+
+@article{kovalsky14,
+	Author = {Kovalsky, Shahar Z and Glasner, Daniel and Basri, Ronen},
+	Date-Added = {2015-01-19 20:07:30 +0000},
+	Date-Modified = {2015-01-19 20:07:44 +0000},
+	Journal = {arXiv preprint arXiv:1409.5957},
+	Title = {A Global Approach for Solving Edge-Matching Puzzles},
+	Year = {2014}}
+
+@article{joshi11,
+	Author = {Joshi, Dhiraj and Datta, Ritendra and Fedorovskaya, Elena and Luong, Quang-Tuan and Wang, James Z and Li, Jia and Luo, Jiebo},
+	Date-Added = {2015-01-19 20:06:25 +0000},
+	Date-Modified = {2015-01-19 20:06:38 +0000},
+	Journal = {Signal Processing Magazine, IEEE},
+	Number = {5},
+	Pages = {94--115},
+	Publisher = {IEEE},
+	Title = {Aesthetics and Emotions in Images},
+	Volume = {28},
+	Year = {2011}}
+
+@inproceedings{jaruvsek11,
+	Author = {Jaru{\v{s}}ek, Petr and Pel{\'a}nek, Radek},
+	Booktitle = {Proc. of Florida Artificial Intelligence Research Society Conference (FLAIRS 2011)},
+	Date-Added = {2015-01-19 20:04:56 +0000},
+	Date-Modified = {2015-01-19 20:05:28 +0000},
+	Pages = {428--433},
+	Title = {What Determines Difficulty of Transport Puzzles?},
+	Year = {2011}}
+
+@inproceedings{jaruvsek10,
+	Author = {Jaru{\v{s}}ek, Petr and Pel{\'a}nek, Radek},
+	Booktitle = {STAIRS 2010: Proceedings of the Fifth Starting AI Researchers' Symposium},
+	Date-Added = {2015-01-19 19:59:09 +0000},
+	Date-Modified = {2015-01-19 19:59:31 +0000},
+	Organization = {IOS Press},
+	Pages = {140},
+	Title = {Difficulty Rating of Sokoban Puzzle},
+	Year = {2010}}
+
+@inproceedings{he08,
+	Author = {He, Chuan and Wang, Cong and Zhong, Yi-Xin and Li, Rui-Fan},
+	Booktitle = {Machine Learning and Cybernetics, 2008 International Conference on},
+	Date-Added = {2015-01-19 18:58:54 +0000},
+	Date-Modified = {2015-01-19 18:59:17 +0000},
+	Organization = {IEEE},
+	Pages = {1734--1739},
+	Title = {A Survey on Learning to Rank},
+	Volume = {3},
+	Year = {2008}}
+
+@article{haraguchi12,
+	Author = {Haraguchi, Kazuya and Abe, Yasutaka and Maruoka, Akira},
+	Date-Added = {2015-01-19 18:57:35 +0000},
+	Date-Modified = {2015-01-19 18:57:50 +0000},
+	Journal = {Journal of Information Processing},
+	Number = {3},
+	Pages = {727--737},
+	Publisher = {一般社団法人 情報処理学会},
+	Title = {How to Produce BlockSum Instances with Various Levels of Difficulty},
+	Volume = {20},
+	Year = {2012}}
+
+@inproceedings{goldberg02,
+	Author = {Goldberg, David and Malon, Christopher and Bern, Marshall},
+	Booktitle = {Proceedings of the eighteenth annual symposium on Computational geometry},
+	Date-Added = {2015-01-19 18:56:24 +0000},
+	Date-Modified = {2015-01-19 18:56:46 +0000},
+	Organization = {ACM},
+	Pages = {82--87},
+	Title = {A Global Approach to Automatic Solution of Jigsaw Puzzles},
+	Year = {2002}}
+
+@article{garabedian34,
+	Author = {Garabedian, C. A.},
+	Date-Added = {2015-01-19 18:54:39 +0000},
+	Date-Modified = {2015-01-19 18:55:45 +0000},
+	Journal = {Bulletin of the American Mathematical Society},
+	Number = {1},
+	Pages = {7--10},
+	Publisher = {American Mathematical Society},
+	Title = {Birkhoff on Aesthetic Measure},
+	Volume = {40},
+	Year = {1934}}
+
+@article{foxepstein14,
+	Author = {Fox-Epstein, Eli and Uehara, Ryuhei},
+	Date-Added = {2015-01-19 18:48:07 +0000},
+	Date-Modified = {2015-01-19 18:49:52 +0000},
+	Journal = {arXiv preprint arXiv:1407.1923},
+	Title = {The Convex Configurations of ``Sei Shonagon Chie no Ita'' and Other Dissection Puzzles},
+	Year = {2014}}
+
+@inproceedings{filonik09,
+	Author = {Filonik, Daniel and Baur, Dominikus},
+	Booktitle = {Information Visualisation, 2009 13th International Conference},
+	Date-Added = {2015-01-19 18:46:04 +0000},
+	Date-Modified = {2015-01-19 18:46:28 +0000},
+	Organization = {IEEE},
+	Pages = {579--584},
+	Title = {Measuring Aesthetics for Information Visualization},
+	Year = {2009}}
+
+@inproceedings{faria20,
+	Author = {Faria, Fabio F and Veloso, Adriano and Almeida, Humberto M and Valle, Eduardo and Torres, Ricardo da S and Gon{\c{c}}alves, Marcos A and Meira Jr, Wagner},
+	Booktitle = {Proceedings of the international conference on Multimedia information retrieval},
+	Date-Added = {2015-01-19 18:44:55 +0000},
+	Date-Modified = {2015-01-19 18:45:13 +0000},
+	Organization = {ACM},
+	Pages = {285--294},
+	Title = {Learning to Rank for Content-Based Image Retrieval},
+	Year = {2010}}
+
+@book{elffers76,
+	Author = {Joost Elffers},
+	Date-Added = {2015-01-19 18:40:30 +0000},
+	Date-Modified = {2015-01-19 18:44:08 +0000},
+	Publisher = {DuMont},
+	Title = {Tangram. Das alte chinesische Formenspiel},
+	Year = {1978}}
+
+@article{eberle14,
+	Author = {R. Scott Eberle},
+	Date-Added = {2015-01-19 18:38:00 +0000},
+	Date-Modified = {2015-01-19 18:40:05 +0000},
+	Journal = {The Journal of Mathematical Behavior},
+	Pages = {129 - 143},
+	Title = {The Role of Children's Mathematical Aesthetics: The Case of Tessellations},
+	Volume = {35},
+	Year = {2014},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0732312314000388},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.jmathb.2014.07.004}}
+
+@inproceedings{duh08,
+	Author = {Duh, Kevin and Kirchhoff, Katrin},
+	Booktitle = {Proceedings of the 31st annual international ACM SIGIR conference on Research and development in information retrieval},
+	Date-Added = {2015-01-19 18:32:39 +0000},
+	Date-Modified = {2015-01-19 18:33:10 +0000},
+	Organization = {ACM},
+	Pages = {251--258},
+	Title = {Learning to Rank with Partially-Labeled Data},
+	Year = {2008}}
+
+@article{deutsch72,
+	Author = {E. S. Deutsch and K. C. {Hayes Jr.} },
+	Date-Added = {2015-01-19 18:19:19 +0000},
+	Date-Modified = {2015-01-19 18:29:56 +0000},
+	Journal = {Machine Intelligence},
+	Number = {Bernard Meltzer and Donald Michie},
+	Pages = {205--240},
+	Publisher = {Edinburgh University Press},
+	Title = {A Heuristic Solution to the Tangram Puzzle},
+	Volume = {7},
+	Year = {1972}}
+
+@article{cohene02,
+	Author = {Cohene, Tira and Dack, Stu and Dufourmantelle, Olivier and Saunders, Matthew},
+	Date-Added = {2015-01-19 18:14:14 +0000},
+	Date-Modified = {2015-01-19 18:17:13 +0000},
+	Journal = {Human-Computer Interaction},
+	Pages = {424B},
+	Title = {The Making of the Tangrambler},
+	Volume = {304},
+	Year = {2002}}
+
+@inproceedings{cheng08,
+	Author = {Cheng, Irene and Shen, Rui and Basu, Anup},
+	Booktitle = {Advanced Learning Technologies, 2008. ICALT'08. Eighth IEEE International Conference on},
+	Date-Added = {2015-01-19 18:11:37 +0000},
+	Date-Modified = {2015-01-19 18:12:20 +0000},
+	Organization = {IEEE},
+	Pages = {175--179},
+	Title = {An Algorithm for Automatic Difficulty Level Estimation of Multimedia Mathematical Test Items},
+	Year = {2008}}
+
+@url{cai08,
+	Author = {Shujun Cai and Yizhi Jiang and Minyu Zeng},
+	Date-Added = {2015-01-19 18:04:21 +0000},
+	Date-Modified = {2015-01-19 18:10:03 +0000},
+	Institution = {Shenzheng Foreign Languages School},
+	Lastchecked = {January 19, 2015 },
+	Title = {The Research on the Difficulty Grade and the Riecing Skills of Tangram},
+	Url = {http://www.yau-awards.org/Notice.php},
+	Year = {2008}}
+
+@incollection{galanter12b,
+	Author = {Galanter, Philip},
+	Booktitle = {Computers and Creativity},
+	Date-Added = {2015-01-19 18:00:27 +0000},
+	Date-Modified = {2015-01-19 18:00:49 +0000},
+	Pages = {255--293},
+	Publisher = {Springer},
+	Title = {Computational Aesthetic Evaluation: Past and Future},
+	Year = {2012}}
+
+@inproceedings{galanter12a,
+	Address = {New York, NY, USA},
+	Author = {Galanter, Philip},
+	Booktitle = {ACM SIGGRAPH 2012 Courses},
+	Date-Added = {2015-01-19 17:48:53 +0000},
+	Date-Modified = {2015-01-19 17:56:55 +0000},
+	Pages = {14:1--14:162},
+	Publisher = {ACM},
+	Series = {SIGGRAPH '12},
+	Title = {Computational Aesthetic Evaluation: Steps Towards Machine Creativity},
+	Year = {2012},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2343483.2343497},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2343483.2343497}}
+
+@incollection{baran07,
+	Annote = {- comparision of solution approaches for tangrams with vayring difficulty
+- differences shown in fixation cound, task completion duration and transition number, part of the screen most focused on
+},
+	Author = {Baran, Bahar and Dogusoy, Berrin and Cagiltay, Kursat},
+	Booktitle = {Human-Computer Interaction. HCI Intelligent Multimodal Interaction Environments},
+	Date-Added = {2015-01-19 17:38:13 +0000},
+	Date-Modified = {2015-01-19 17:39:22 +0000},
+	Keywords = {Solution},
+	Pages = {555--563},
+	Publisher = {Springer},
+	Rating = {2},
+	Read = {1},
+	Title = {How Do Adults Solve Digital Tangram Problems? Analyzing Cognitive Strategies Through Eye Tracking Approach},
+	Year = {2007}}
+
+@inproceedings{ayaz12,
+	Annote = {- experiment to measure brain activity during solving of a tangram
+- right hemisphere is more active
+- increase in brain activity similar to other cognitive tasks
+- difference to arithmetic tasks with linguistic representation?},
+	Author = {Ayaz, Hasan and Shewokis, Patricia A and Izzetoglu, M and Cakir, MP and Onaral, Banu},
+	Booktitle = {Engineering in Medicine and Biology Society (EMBC), 2012 Annual International Conference of the IEEE},
+	Date-Added = {2015-01-19 17:31:00 +0000},
+	Date-Modified = {2015-01-19 17:37:25 +0000},
+	Keywords = {Education},
+	Organization = {IEEE},
+	Pages = {4724--4727},
+	Rating = {1},
+	Read = {1},
+	Title = {Tangram Solved? Prefrontal Cortex Activation Analysis During Geometric Problem Solving},
+	Year = {2012}}
+
+@article{ailon10,
+	Annote = {- useful keywords for future search: prefence-learning to rank, prefernce-based, score-based
+- some pointers to other learning to rank literature
+- otherwise based on binary classification, thus probably not relevant here},
+	Author = {Ailon, Nir and Mohri, Mehryar},
+	Date-Added = {2015-01-19 17:25:29 +0000},
+	Date-Modified = {2015-01-19 17:29:29 +0000},
+	Journal = {Machine Learning},
+	Keywords = {Ranking},
+	Number = {2-3},
+	Pages = {189--211},
+	Publisher = {Springer},
+	Rating = {1},
+	Read = {1},
+	Title = {Preference-Based Learning to Rank},
+	Volume = {80},
+	Year = {2010}}
+
+@book{slocum03,
+	Annote = {- Sam Loyds book full of errors (7)
+- mention of Japanese dissection puzzle (Sei Shonagon) (12)
+- proof of pythagoran theorem as origin of tangrams? (15)
+- name not originally chinese (23)
+- found original, mostly later, dates to published tangrams claimed to have other publishing dates (60)
+- paradoxal tangrams (100)
+- many tangram examples},
+	Author = {Jerry Slocum},
+	Date-Added = {2015-01-19 16:52:20 +0000},
+	Date-Modified = {2015-01-19 17:29:42 +0000},
+	Keywords = {History, Examples, Paradox},
+	Publisher = {Sterling Publishing},
+	Rating = {3},
+	Read = {1},
+	Title = {The Tangram Book},
+	Year = {2003}}
